--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
     "ky": "^1.7.2",
     "next": "14.2.15",
     "react": "^18",
@@ -16,6 +17,7 @@
     "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
+    "@types/react": "^18.3.11",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
